simplificar endpoints de comandas